# ChangeLog for app-misc/g15composer
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/g15composer/ChangeLog,v 1.16 2007/05/01 10:14:03 corsair Exp $

  01 May 2007; Markus Rothe <corsair@gentoo.org> g15composer-3.1.ebuild:
  Added ~ppc64; bug #175120

  29 Mar 2007; Markus Ullmann <jokey@gentoo.org> g15composer-3.1.ebuild:
  AMD64 stable (welp oleee)

  15 Mar 2007; Robert Buchholz <rbu@gentoo.org>
  -files/g15composer-3.0.2.confd, -files/g15composer-3.0.2.initd,
  g15composer-1.1.ebuild, -g15composer-3.0.2.ebuild, g15composer-3.1.ebuild:
  USE=truetype check for libg15render by tove wrt bug #170417, drop of 3.0.2
  version

  15 Mar 2007; Torsten Veller <tove@gentoo.org> g15composer-3.1.ebuild:
  Stable on x86 (#170417)

  18 Feb 2007; Robert Buchholz <rbu@gentoo.org> g15composer-3.0.2.ebuild,
  g15composer-3.1.ebuild:
  Fixed usage of ROOT, bug #167240

  07 Jan 2007; Robert Buchholz <rbu@gentoo.org> g15composer-1.1.ebuild,
  g15composer-3.0.2.ebuild, g15composer-3.1.ebuild:
  einfo->elog

*g15composer-3.1 (02 Jan 2007)

  02 Jan 2007; Robert Buchholz <rbu@gentoo.org>
  -files/g15composer-2.1.confd, -files/g15composer-2.1.initd,
  +files/g15composer-3.0.2.confd, +files/g15composer-3.0.2.initd,
  +files/g15composer-3.1.confd, +files/g15composer-3.1.initd, metadata.xml,
  -g15composer-2.1-r1.ebuild, -g15composer-3.0.1.ebuild,
  g15composer-3.0.2.ebuild, +g15composer-3.1.ebuild:
  Bumping to 3.1, init supports running the composer as user. Removing some
  old versions.

*g15composer-3.0.2 (06 Dec 2006)

  06 Dec 2006; Markus Ullmann <jokey@gentoo.org> +g15composer-3.0.2.ebuild:
  Version bump

*g15composer-2.1-r1 (31 Oct 2006)

  31 Oct 2006; Markus Ullmann <jokey@gentoo.org> -g15composer-2.1.ebuild,
  +g15composer-2.1-r1.ebuild:
  Init script fixes

*g15composer-3.0.1 (31 Oct 2006)

  31 Oct 2006; Markus Ullmann <jokey@gentoo.org> g15composer-1.1.ebuild,
  +g15composer-3.0.1.ebuild:
  Version bump
