@@ -1,9 +1,23 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX g15composer-1.1.initd 737 RMD160 57b7f6135ab48dd587e793e74ce36de4d147be95 SHA1 01637e58637e0879a1b5e9cac926efa318dbee30 SHA256 fe12bcbe0d2a5a8cf7cab7e01bf50f73d37a03571b6b89b955106e5ff5591c69
 AUX g15composer-3.1.confd 695 RMD160 179650946e535b994d35c3913a7087d7f2154e68 SHA1 4f2ebfcae2649786876e0744ec3e6ecc0dd57281 SHA256 1f070d07b3a4956b7dfe584bdb25043d340314e8916cb2e00afa9060cf5488e6
 AUX g15composer-3.1.initd 1368 RMD160 3d478ac01259bec0f4c3d6ddb6ee97a22fd9518f SHA1 0b902ca423485d54888735fa0f7928cd32be0d9d SHA256 ac3ff78050b36ae62d67b27f760f712676a8394aaeb556510eaa8ebc29a46f19
+AUX g15composer-3.2.confd 695 RMD160 179650946e535b994d35c3913a7087d7f2154e68 SHA1 4f2ebfcae2649786876e0744ec3e6ecc0dd57281 SHA256 1f070d07b3a4956b7dfe584bdb25043d340314e8916cb2e00afa9060cf5488e6
+AUX g15composer-3.2.initd 1373 RMD160 70d1ec4d4780345f9e67a1833d12b4b81948ad75 SHA1 83c47cc19025ce125a8d232b64187fc29e3f3cc0 SHA256 2cc04630b66e4c335f5c791bf213edd543af4d3424c5fbc2e72b3ccdc243d01e
 DIST g15composer-1.1.tar.bz2 70140 RMD160 51d431adfc4469f8195c077d49e82b98bea04b57 SHA1 6b30f1c521fb1c45f7ce628fc812a09feb6e827a SHA256 52220b0e3e1219ecf5504f8b70d7be23a4e12d640b9367e34a3db6bbfe2dc2ef
 DIST g15composer-3.1.tar.bz2 104109 RMD160 ab31de24416452a8a363e0a0ae8856c21706b6fc SHA1 648117dde17d356878dd834de763004d6b6d8f0a SHA256 d8f34c1711e95f8ca3ddd9fd5f557a51bb23b79099fbf2fddb96bdcd03067988
+DIST g15composer-3.2.tar.bz2 105805 RMD160 0fb6a6b18dfda490847a226bdb4175d1102a35ae SHA1 db0085555a36720f6c0d57d32f4fe9549ec1e57a SHA256 0ae3fdac1dd5858bb7185ae5a50a6ff1c657a29d02b44c8a73f1c38cec17b035
 EBUILD g15composer-1.1.ebuild 1200 RMD160 3d8934a597ec8322728dbadbcf24182d768c78aa SHA1 c1cfd80b7da0894d8aacac64753aa4e03fa39ae8 SHA256 875846b60e0d3b8545a496ce6a328f0f2d7cf6bf935f1fb4bc559e337096214f
 EBUILD g15composer-3.1.ebuild 2017 RMD160 5c7bafa7228b282697f3fcca4d09c9fc075afc5c SHA1 3e2b770f6c4874c83cd7fbbd5458736a04c8ba53 SHA256 838c8638d2794d9bb6d2f5ac6eba8035f33ffb8b6910c55418af3a55a5c09018
-MISC ChangeLog 2963 RMD160 19e28d2efcbc4c6f8949ea9f4f60dbd38b530096 SHA1 13fcddf9c77c39d81b9d53bcff7d3cd06bc2c80d SHA256 40dadc0d93c00c059838d50a11d4c8de52d11c4c3c44d3cdd03f4e908315845f
-MISC metadata.xml 249 RMD160 f108edee61c95c42d98726b435b75d03cbbd4aac SHA1 48461481dfc5a9d1f5b4726a5e9882a2fb966ede SHA256 1dc990d64e5b42c9b17d7358c9f0af7d26702f575957482d93c8fd12a556cc11
+EBUILD g15composer-3.2.ebuild 2020 RMD160 2eea209dc4250cc844c39080168335e4d9259342 SHA1 8316d980ed69f88a72ffa56651b599ef02b97204 SHA256 e828d90f880eb87e66739cb2480bc23289a268bacbf066df5cbd6e992bd0f6e8
+MISC ChangeLog 3234 RMD160 6c216294f7dcaaceedc122a1142078309b54c029 SHA1 0beb12decf91061aa5d0b162693d5e56a92ebb89 SHA256 1aae0b6ff3516f3f747f1a73e64e53ed1bbd573f4d2801e922882942e93fce2d
+MISC metadata.xml 249 RMD160 3a959d6b2d70ee342ccdf4abcaa3107d6f2897ed SHA1 942405176c914e1682a8a0daa6c5b9d7b6a2a94d SHA256 5a7fbdf3050c5c4c8f1dc154e8c715162b71ef329ec3e59facb4965dea2c9a81
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.7 (GNU/Linux)
+
+iD8DBQFHvbE4p5vW4rUFj5oRAu22AJ9Hskxmq1phCDuojRi70Mjr5846rwCcCLnD
+zZ6/Cau6/SPEihMHfz6oBd0=
+=eBws
+-----END PGP SIGNATURE-----
