@@ -3,7 +3,7 @@
 <pkgmetadata>
 	<herd>lcd</herd>
 	<maintainer>
-		<email>rbu@gentoo.org</email>
-		<name>Robert Buchholz</name>
+		<email>chainsaw@gentoo.org</email>
+		<name>Tony Vroon</name>
 	</maintainer>
 </pkgmetadata>
